--- a/layouts/partials/sections/hero/index.html
+++ b/layouts/partials/sections/hero/index.html
@@ -13,7 +13,10 @@
 
 <section id="hero" class="d-flex align-items-center" style="position: relative; overflow: hidden; background: #000; height: 100vh; width: 100%;">
     <!-- 粒子特效 -->
-    <iframe src="https://fsu.creght.com/project/nWFMcPbduNu/mmuitTyWrsx__particle_scatter_effect.html" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none; z-index: 1; pointer-events: none;" allowtransparency="true"></iframe>
+    <iframe src="/hero-particles.html" 
+        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none; z-index: 1; pointer-events: none;" 
+        allowtransparency="true">
+    </iframe>
     
     <div class="container" style="position: relative; z-index: 2;">
         <div class="row align-items-center">
