feat: 更改论文list作者颜色

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -198,8 +198,8 @@
       // 1. Author Coloring
       document.querySelectorAll(".author-text").forEach(el => {
         el.innerHTML = el.innerHTML
-          .replace(/([^,#*]+?)\s*#/g, '<span style="color: #00aa00 !important; font-weight: 500;">$1</span>')
-          .replace(/([^,#*]+?)\s*\*/g, '<span style="color: #0066cc !important; font-weight: 500;">$1</span>');
+          .replace(/([^,#*]+?)\s*#/g, '<span style="color: #667eea !important; font-weight: 500;">$1</span>')
+          .replace(/([^,#*]+?)\s*\*/g, '<span style="color: #a78bfa !important; font-weight: 500;">$1</span>');
       });
 
       // 2. Year Toggle Logic (Only for All-Years view)
