--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -497,7 +497,7 @@
   .member-footer a:hover { color: #fff; }
 </style>
 <div class="container pt-5" id="team-page">
-  <h2 class="text-center pb-4">{{ .Title }}</h2>
+  <h2 class="pb-4" style="text-align: left;">{{ .Title }}</h2>
   
   {{/* Faculty Members */}}
   {{ if .Params.faculty }}
